apps/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: linuxserver/heimdall:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        emptyDir: {}
