apps/heimdall/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: heimdall-netpol
spec:
  podSelector:
    matchLabels:
      app: heimdall
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: traefik-system
        - namespaceSelector:
            matchLabels:
              name: default
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to: []
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - to: []
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
